--- a/public/ng_templates/mappings/edit.html
+++ b/public/ng_templates/mappings/edit.html
@@ -9,6 +9,12 @@
   <input type="text" ng-model="mapping.name" class='form-control' />
 </div>
 
+<div class="checkbox">
+  <label>
+    <input type="checkbox" ng-model='mapping.active'> Active
+  </label>
+</div>
+
 <div class='row'>
   <div class='col-md-4' ng-include="'/ng_templates/mappings/odk_column.html'"></div>
   <div class='col-md-4' ng-include="'/ng_templates/mappings/sf_search_column.html'"></div>
