Changing mapping UX using tabs

--- a/public/ng_templates/mappings/odk_column.html
+++ b/public/ng_templates/mappings/odk_column.html
@@ -1,4 +1,4 @@
-<h4>1. Select an ODK Field</h4>
+<h4>ODK Form Object</h4>
 
 <div class="form-group">
   <label for="mapping_odk_formid">Open Data Kit Form</label>
