--- a/public/ng_templates/mappings/odk_column.html
+++ b/public/ng_templates/mappings/odk_column.html
@@ -3,7 +3,7 @@
 
   <div class="form-group">
     <label for="mapping_odk_formid">Open Data Kit Form</label>
-    <select ng-disabled="editMode" ng-model="mapping.odk_formid" ng-options="o as o for o in odkForms" class='form-control'></select>
+    <select ng-model="mapping.odk_formid" ng-options="o as o for o in odkForms" class='form-control'></select>
   </div>
 
   <div class="form-group">
