--- a/public/ng_templates/mappings/edit.html
+++ b/public/ng_templates/mappings/edit.html
@@ -11,12 +11,16 @@
 
 <div class="checkbox">
   <label>
-    <input type="checkbox" ng-model='mapping.active'> Active
+    <input type="checkbox" ng-model='mapping.active' ng-checked='mapping.active'> Active
   </label>
 </div>
 
-<div class='row'>
-  <div class='col-md-6' ng-include="'/ng_templates/mappings/odk_column.html'"></div>
-  <div class='col-md-6' ng-include="'/ng_templates/mappings/sf_column.html'"></div>
+<div class="row">
+  <div class='col-md-12' ng-include="'/ng_templates/mappings/sf_column.html'"></div>
 </div>
+
+<div class='row'>
+  <div class='col-md-12' ng-include="'/ng_templates/mappings/odk_column.html'"></div>
+</div>
+
 <a href='#' ng-click="saveMapping()" class='btn btn-success'>Update Mapping</a>
