--- a/public/ng_templates/mappings/odk_column.html
+++ b/public/ng_templates/mappings/odk_column.html
@@ -1,13 +1,18 @@
 <div ng-controller="OdkColumnCtrl">
   <h4>ODK Form Object</h4>
 
-  <div class="form-group">
-    <label for="mapping_odk_formid">Open Data Kit Form</label>
-    <select ng-model="mapping.odk_formid" ng-options="o as o for o in odkForms" class='form-control'></select>
-  </div>
-
-  <div class="form-group">
-    <input ng-model="odkFilter.field_name" type='text' placeholder="Filter ODK fields" class='form-control' />
+  <div class='row'>
+    <div class='col-md-4'>
+      <div class="form-group">
+        <!-- <label for="mapping_odk_formid">Open Data Kit Form</label> -->
+        <select ng-model="mapping.odk_formid" ng-options="o as o for o in odkForms" class='form-control'></select>
+      </div>
+    </div>
+    <div class='col-md-8'>
+      <div class="form-group">
+        <input ng-model="odkFilter.field_name" type='text' placeholder="Filter ODK fields" class='form-control' />
+      </div>
+    </div>
   </div>
 
   <table class='table'>
@@ -20,10 +25,10 @@
     <tbody>
       <tr ng-repeat="odkFormField in odkFormFields" ng-controller="OdkFormFieldCtrl">
         <td>{{odkFormField.field_name}}: {{odkFormField.field_type}}</td>
-        <td>
-          <ul class="list-group sortable-location sf-connected-sortable" 
+        <td style='width: 50%'>
+          <ul class="list-group sortable-location sf-connected-sortable"
               ui-sortable="sfSortableOptions" ng-model="odkFormField.sf_fields">
-            <li class="list-group-item" ng-repeat="sfField in odkFormField.sf_fields">
+            <li class="list-group-item" ng-repeat="sfField in odkFormField.sf_fields" ng-style="{'background-color': sfField.color}">
               {{sfField.field_name}}
             </li>
           </ul>
@@ -31,5 +36,5 @@
       </tr>
     </tbody>
   </table>
-  
+
 </div>
