--- a/public/ng_templates/mappings/new.html
+++ b/public/ng_templates/mappings/new.html
@@ -1,3 +1,7 @@
+{{mapping.mappedObjects}}
+<hr>
+<hr>
+{{mapping.mappingSalesforceObjects}}
 <div id="errorExplanation" class='text-danger' ng-show="errors">
   <ul>
     <li ng-repeat="error in errors">{{error}}</li>
