--- a/public/ng_templates/mappings/new.html
+++ b/public/ng_templates/mappings/new.html
@@ -1,3 +1,4 @@
+{{mapping.mappedObjects}}
 <div id="errorExplanation" class='text-danger' ng-show="errors">
   <ul>
     <li ng-repeat="error in errors">{{error}}</li>
