--- a/public/ng_templates/mappings/sf_row.html
+++ b/public/ng_templates/mappings/sf_row.html
@@ -16,18 +16,18 @@
     </div>
 
     <ul class="nav nav-tabs">
-      <li ng-repeat="sfObject in mapping.mappingSalesforceObjects" ng-style="{'background-color': sfObject.color}">
+      <li ng-repeat="sfObject in mapping.mappedSfObjects" ng-style="{'background-color': sfObject.color}" ng-click="updateObject(sfObject)">
         <a href="#{{sfObject.name}}" data-toggle="tab">{{sfObject.name}}</a>
       </li>
     </ul>
 
     <div class="tab-content">
-      <div ng-repeat="sfObject in mapping.mappingSalesforceObjects" class="tab-pane" id="{{sfObject.name}}">
+      <div ng-repeat="sfObject in mapping.mappedSfObjects" class="tab-pane" id="{{sfObject.name}}">
         <div class='row'>
           <div class='col-md-6'>
-            <a href="#" ng-click="updateObject(sfObject)" class='btn btn-success'>
+            <!-- <a href="#" ng-click="updateObject(sfObject)" class='btn btn-success'>
               Refresh SF Fields
-            </a>
+            </a> -->
           </div>
           <div class='col-md-6'>
             Check if lookup field is not <code>Name</code> (only one).
@@ -38,13 +38,7 @@
           <ul class='list-group sf-connected-sortable sortable-location'
               ui-sortable="sfSortableOptions" ng-model="sfObject.fields">
             <li class='list-group-item' ng-repeat="sfField in sfObject.fields | filter:sfFilter" ng-style="{'background-color': sfField.color}">
-              <input type="checkbox" ng-model="sfField.is_lookup"></input>
               {{sfField.field_name}}
-              <div ng-show="sfField.is_lookup">
-                <div ng-controller="LookupObjectCtrl">
-                  <div ng-include="'/ng_templates/mappings/lookup_object.html'"></div>
-                </div>
-              </div>
             </li>
           </ul>
         </div>
