Adding alphabetical sorting to tabs

--- a/public/ng_templates/mappings/sf_row.html
+++ b/public/ng_templates/mappings/sf_row.html
@@ -16,7 +16,7 @@
     </div>
 
     <ul class="nav nav-tabs">
-      <li ng-repeat="sfObject in mapping.mappedSfObjects" ng-style="{'background-color': sfObject.color}" ng-click="updateObject(sfObject)">
+      <li ng-repeat="sfObject in mapping.mappedSfObjects | orderBy:'name'" ng-style="{'background-color': sfObject.color}" ng-click="updateObject(sfObject)">
         <a href="#{{sfObject.name}}" data-toggle="tab">{{sfObject.label}}</a>
       </li>
     </ul>
