Adding stick row for sf-fields

--- a/public/ng_templates/mappings/sf_row.html
+++ b/public/ng_templates/mappings/sf_row.html
@@ -1,4 +1,4 @@
-<div ng-controller="SfColumnCtrl" class='panel panel-default'>
+<div ng-controller="SfColumnCtrl" class='panel panel-default sf-row' bs-affix data-offset-top="288">
   <div class='panel-body'>
     <h4>SF Fields</h4>
     <div class='row'>
