card 69 - Adding SF section back to the form

--- a/public/ng_templates/mappings/new.html
+++ b/public/ng_templates/mappings/new.html
@@ -29,9 +29,9 @@
 </div>
 
 <h4>Step 2: Load your Salesforce Objects by order of insertion</h4>
-<!-- <div class="row well">
+<div class="row well sf-row" bs-affix data-offset-top="320">
   <div class='col-md-12' ng-include="'/ng_templates/mappings/sf_row.html'"></div>
-</div> -->
+</div>
 
 <div class='row'>
   <div class='col-md-12' ng-include="'/ng_templates/mappings/odk_column.html'"></div>
