card 69 - adding objects to join and start submit params

--- a/public/ng_templates/mappings/new.html
+++ b/public/ng_templates/mappings/new.html
@@ -23,7 +23,7 @@
   <div class='col-md-4'>
     <div class="form-group">
       <!-- <label for="mapping_odk_formid">Open Data Kit Form</label> -->
-      <select ng-model="mapping.odk_formid" ng-options="o as o for o in odkForms" class='form-control'></select>
+      <select ng-model="mapping.odkForm.name" ng-options="o as o for o in odkForms" class='form-control'></select>
     </div>
   </div>
 </div>
