--- a/public/ng_templates/mappings/edit.html
+++ b/public/ng_templates/mappings/edit.html
@@ -4,6 +4,8 @@
   </ul>
 </div>
 
+<h4>Fill out your mapping details</h4>
+
 <div class="form-group">
   <label for="mapping_name">Name</label>
   <input type="text" ng-model="mapping.name" class='form-control' />
@@ -15,12 +17,16 @@
   </label>
 </div>
 
-<div class="row">
+<h4><small>Your ODK Form:</small> {{mapping.odk_form.name}}</h4>
+
+<!-- <h4>Step 2: Load your Salesforce Objects by order of insertion</h4>
+<div class="row well sf-row" bs-affix data-offset-top="320">
   <div class='col-md-12' ng-include="'/ng_templates/mappings/sf_row.html'"></div>
 </div>
+-->
 
 <div class='row'>
   <div class='col-md-12' ng-include="'/ng_templates/mappings/odk_column.html'"></div>
 </div>
 
-<a href='#' ng-click="saveMapping()" class='btn btn-success'>Update Mapping</a>
+<a href='#' ng-click="saveMapping()" class='btn btn-success btn-block'>Create Mapping</a>
