--- a/public/ng_templates/mappings/new.html
+++ b/public/ng_templates/mappings/new.html
@@ -19,22 +19,17 @@
 
 <h4>Step 1: Choose your ODK Form</h4>
 
-<div class='row' ng-controller="OdkColumnCtrl">
+<div class='row'>
   <div class='col-md-4'>
     <div class="form-group">
       <!-- <label for="mapping_odk_formid">Open Data Kit Form</label> -->
       <select ng-model="mapping.odkForm.name" ng-options="o as o for o in odkForms" class='form-control'></select>
     </div>
   </div>
+  <div class='col-md-4'>
+    <a href='#' ng-click="createMapping()" class='btn btn-success'>Create Mapping</a>
+  </div>
+
 </div>
 
-<h4>Step 2: Load your Salesforce Objects by order of insertion</h4>
-<div class="row well sf-row" bs-affix data-offset-top="320">
-  <div class='col-md-12' ng-include="'/ng_templates/mappings/sf_row.html'"></div>
-</div>
 
-<div class='row'>
-  <div class='col-md-12' ng-include="'/ng_templates/mappings/odk_column.html'"></div>
-</div>
-
-<a href='#' ng-click="saveMapping()" class='btn btn-success btn-block'>Create Mapping</a>
