--- a/public/ng_templates/mappings/odk_column.html
+++ b/public/ng_templates/mappings/odk_column.html
@@ -1,13 +1,13 @@
-<div ng-controller="OdkColumnCtrl">
+<div>
   <h4>ODK Form Object</h4>
 
-  <div class='row'>
+<!--   <div class='row'>
     <div class='col-md-8'>
       <div class="form-group">
         <input ng-model="odkFilter.field_name" type='text' placeholder="Filter ODK fields" class='form-control' />
       </div>
     </div>
-  </div>
+  </div> -->
 
   <table class='table'>
     <thead>
@@ -18,10 +18,10 @@
       </tr>
     </thead>
     <tbody>
-      <tr ng-repeat="odkFormField in mapping.odkForm.odkFields | filter:odkFilter">
-        <td style="width: 50%" ng-style="odkFormField.displayStyle">{{odkFormField.displayName}}</td>
+      <tr ng-repeat="odkFormField in mapping.odk_form.odk_fields | filter:odkFilter">
+        <td style="width: 50%" ng-style="odkFormField.displayStyle">{{odkFormField.field_name}}</td>
         <td style="width: 20%">{{odkFormField.field_type}}</td>
-        <td style='width: 30%'>
+        <!-- <td style='width: 30%'>
           <ul class="list-group sortable-location sf-connected-sortable sf-target" ui-sortable="sfSortableOptions" ng-model="odkFormField.salesforceFields">
             <li class="list-group-item" ng-repeat="sfField in odkFormField.salesforceFields" ng-style="{'background-color': sfField.color}" ng-hide="sfField._destroy">
               {{sfField.field_name}}
@@ -34,7 +34,7 @@
               </div>
             </li>
           </ul>
-        </td>
+        </td> -->
       </tr>
     </tbody>
   </table>
