--- a/public/ng_templates/mappings/odk_column.html
+++ b/public/ng_templates/mappings/odk_column.html
@@ -18,20 +18,14 @@
       </tr>
     </thead>
     <tbody>
-      <tr ng-repeat="odkFormField in mapping.odk_form.odk_fields | filter:odkFilter">
+      <tr ng-repeat="odkFormField in mapping.odk_form.odk_fields | filter:odkFilter" ng-controller="OdkFieldCtrl">
         <td style="width: 50%" ng-style="odkFormField.displayStyle">{{odkFormField.field_name}}</td>
         <td style="width: 20%">{{odkFormField.field_type}}</td>
         <td style='width: 30%'>
           <ul class="list-group sortable-location sf-connected-sortable sf-target" ui-sortable="sfSortableOptions" ng-model="odkFormField.salesforceFields">
-            <li class="list-group-item" ng-repeat="sfField in odkFormField.salesforceFields" ng-style="{'background-color': sfField.color}" ng-hide="sfField._destroy">
+            <li class="list-group-item" ng-repeat="sfField in odkFormField.salesforceFields" ng-style="{'background-color': sfField.color}">
               {{sfField.field_name}}
-              <a href="#" class='glyphicon glyphicon-remove white' ng-click="sfField._destroy = true"></a>
-              <!--<input type="checkbox" ng-model="sfField.is_lookup"></input>
-              <div ng-show="sfField.is_lookup">
-                <div ng-controller="LookupObjectCtrl">
-                  <div ng-include="'/ng_templates/mappings/lookup_object.html'"></div>
-                </div>
-              </div> -->
+              <a href="#" class='glyphicon glyphicon-remove white' ng-click="deleteField(sfField)"></a>
             </li>
           </ul>
         </td>
