--- a/public/ng_templates/mappings/odk_column.html
+++ b/public/ng_templates/mappings/odk_column.html
@@ -1,6 +1,6 @@
 <table class='table'>
   <tbody>
-    <tr ng-repeat="salesforceObject in mapping.salesforceObjects" ng-style="{'background-color': salesforceObject.color}" ng-controller="SalesforceRelationshipCtrl">
+    <tr ng-repeat="salesforceObject in mapping.salesforceObjects | filter: {is_repeat: false}" ng-style="{'background-color': salesforceObject.color}" ng-controller="SalesforceRelationshipCtrl">
       <td>
         {{salesforceObject.name}}
       </td>
@@ -8,7 +8,7 @@
         <ul class="list-group sortable-location sf-connected-sortable sf-target" ui-sortable="sfSortableOptions" ng-model="salesforceObject.relationshipFields">
           <li class="list-group-item sf-field" ng-repeat="relationshipField in salesforceObject.relationshipFields" ng-style="{'background-color': relationshipField.color}">
             {{relationshipField.field_name}}
-            <!-- <a href="#" class='glyphicon glyphicon-remove white' ng-click="deleteField(sfField)"></a> -->
+            <a href="#" class='glyphicon glyphicon-remove white' ng-click="deleteRelationship(relationshipField)"></a>
           </li>
         </ul>
       </td>
